Main page responsive

--- a/index.html
+++ b/index.html
@@ -28,6 +28,41 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
   </header>
+
+
+  <!-- Main -->
+  <main class="container aligner">
+      <div class="row">
+        <div class="col-12 col-lg-6 aligner px-4 pt-5 pb-3 m-0 g-0">
+          <h2 class="bebas">Title</h2>
+          <p class="roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis a ex, ab magni sequi!</p>
+          <div class="roboto">
+            <button class="me-3 mb-3">Consultation</button>
+            <button class="mb-3">En savoir plus</button>
+          </div>
+          <div class="centrer-aligner roboto">
+            <div>
+              <p>20+</p>
+              <p>20+</p>
+            </div>
+            <div>
+              <p>20+</p>
+              <p>20+</p>
+            </div>
+            <div>
+              <p>20+</p>
+              <p>20+</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6 p-0 centrer">
+          <img alt="" src="./images/accueil/profil.jpg">
+        </div>
+      </div>
+  </main>
+
+
+
   
   <script src="./app.js"></script>
   <!-- JavaScript Bundle with Popper -->
