Accueil "services" responsive

--- a/index.html
+++ b/index.html
@@ -55,11 +55,35 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 p-0 centrer">
+        <div class="col-12 col-lg-6 p-0 centrer mb-5">
           <img alt="" src="./images/accueil/profil.jpg">
         </div>
       </div>
   </main>
+
+  <section class="container-fluid aligner-centrer" id="offres">
+    <div class="row mb-4 mt-5">
+      <h2 class="bebas">Mes services</h2>
+    </div>
+    <div class="row justify-content-around mx-3">
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Depression Therapy</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Consultations couples</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Relations</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+    </div>
+    <button class="text-center mb-5 roboto">Tout les services</button>
+  </section>
 
 
 
