--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Medical</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -61,6 +61,7 @@
       </div>
   </main>
 
+  <!-- Offres -->
   <section class="container-fluid aligner-centrer" id="offres">
     <div class="row mb-4 mt-5">
       <h2 class="bebas">Mes services</h2>
@@ -84,6 +85,33 @@
     </div>
     <button class="text-center mb-5 roboto">Tout les services</button>
   </section>
+
+
+  <!-- conseils -->
+  <section class="container aligner" id="conseils">
+    <div class="row">
+      <div class="col-12 col-lg-6 aligner px-4 pt-5 pb-3 m-0 g-0">
+        <h2 class="bebas">Dr Brooks - Conseiller et thérapeute agréé en santé mentale</h2>
+        <p class="roboto mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis a ex, ab magni sequi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia at in quod repellendus corrupti officiis temporibus suscipit ipsum est aliquid?</p>
+        <div class="centrer-aligner roboto mb-5 row">
+          <div class="me-5 col-xl-5">
+            <p><i class="fa-solid fa-circle-check me-2"></i>Consultation personnel</p>
+            <p><i class="fa-solid fa-circle-check me-2"></i>Therapie de groupe</p>
+            <p><i class="fa-solid fa-circle-check me-2"></i>Therapie en ligne</p>
+          </div>
+          <div class="me-5 col-xl-5">
+            <p><i class="fa-solid fa-circle-check me-2"></i>Techniques uniques</p>
+            <p><i class="fa-solid fa-circle-check me-2"></i>Problèmes de couples</p>
+            <p><i class="fa-solid fa-circle-check me-2"></i>Therapie privée</p>
+          </div>
+        </div>
+        <button class="mb-3">En savoir plus</button>
+      </div>
+      <div class="col-12 col-lg-6 p-0 centrer mb-5">
+        <img alt="" src="./images/accueil/profil.jpg">
+      </div>
+    </div>
+</section>
 
 
 
