Accueil "tarifs" responsive

--- a/index.html
+++ b/index.html
@@ -105,13 +105,117 @@
             <p><i class="fa-solid fa-circle-check me-2"></i>Therapie privée</p>
           </div>
         </div>
-        <button class="mb-3">En savoir plus</button>
+        <div class="text-center text-lg-start">
+          <button class="mb-5">En savoir plus</button>
+        </div>
       </div>
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
         <img alt="" src="./images/accueil/profil.jpg">
       </div>
     </div>
-</section>
+  </section>
+
+
+  <!-- Tarifs -->
+  <section id="tarifs">
+    <div class="container-fluid">
+      <div class="row text-center pt-5 px-4">
+        <h2 class="bebas">Tarifs</h2>
+      </div>
+      <div class="row px-3 py-5 text-center prestation justify-content-center">
+        <p class="col-md-10 col-xl-8 col-xxl-6 roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non.</p>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+          <div class="choix p-3 p-sm-5">
+            <h3 class="pb-1">Personnel</h3>
+            <p class="bebas">99€ / H</p>
+            <ul class="mb-5">
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie de groupe
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie en ligne
+              </li>
+              <li class="no">
+                <i class="fa-solid fa-circle-check me-2"></i> Techniques uniques
+              </li>
+              <li class="no">
+                <i class="fa-solid fa-circle-check me-2"></i> Problèmes de couples
+              </li>
+              <li class="no">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie privée
+              </li>
+            </ul>
+            <div class="text-center">
+              <button><a href="#">Réserver</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+          <div class="choix p-3 p-sm-5">
+            <h3 class="pb-1">Couple</h3>
+            <p class="bebas">179€ / H</p>
+            <ul class="mb-5">
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie de groupe
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie en ligne
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Techniques uniques
+              </li>
+              <li class="no">
+                <i class="fa-solid fa-circle-check me-2"></i> Problèmes de couples
+              </li>
+              <li class="no">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie privée
+              </li>
+            </ul>
+            <div class="text-center">
+              <button><a href="#">Réserver</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+          <div class="choix p-3 p-sm-5">
+            <h3 class="pb-1">Groupe</h3>
+            <p class="bebas">299€ / H</p>
+            <ul class="mb-5">
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Consultation personnel
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie de groupe
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie en ligne
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Techniques uniques
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Problèmes de couples
+              </li>
+              <li class="yes">
+                <i class="fa-solid fa-circle-check me-2"></i> Therapie privée
+              </li>
+            </ul>
+            <div class="text-center">
+              <button><a href="#">Réserver</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
