JS Panneaux stylisés "Questions"

--- a/index.html
+++ b/index.html
@@ -218,6 +218,133 @@
   </section>
 
 
+  <!-- Questions -->
+  <h2 class="text-center mt-5 bebas">Questions les plus demandés</h2>
+  <section id="questions">
+    <div class="bloc activer">
+      <div class="bloc-haut">
+        <div class="rond">
+          <img src="./images/accueil/together.png" alt=""/>
+        </div>
+        <p class="titre-question">Que ressentez-vous en vous projetant dans une vie où vous ne verriez plus votre partenaire ?</p>
+        <p class="number-question">1</p>
+      </div>
+      <div class="contenu">
+          <div class="infos">
+              <p class="roboto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
+              <button>Consulter</button>
+          </div>
+      </div>
+    </div>
+
+    <div class="bloc">
+      <div class="bloc-haut">
+        <div class="rond">
+          <img src="./images/accueil/solo.png" alt=""/>
+        </div>
+        <p class="titre-question">Avez-vous le sentiment d’être aimé/accepté pour ce que vous êtes ?</p>
+        <p class="number-question">2</p>
+      </div>
+      <div class="contenu">
+          <div class="infos">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
+              <button>Consulter</button>
+          </div>
+      </div>
+    </div>
+
+    <div class="bloc">
+      <div class="bloc-haut">
+        <div class="rond">
+          <img src="./images/accueil/together.png" alt=""/>
+        </div>
+        <p class="titre-question">Malgré les problèmes, votre relation et son environnement restent-ils importants pour vous ?</p>
+        <p class="number-question">3</p>
+      </div>
+      <div class="contenu">
+          <div class="infos">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
+              <button>Consulter</button>
+          </div>
+      </div>
+    </div>
+
+
+
+    <div class="bloc">
+      <div class="bloc-haut">
+        <div class="rond">
+          <img src="./images/accueil/together.png" alt=""/>
+        </div>
+        <p class="titre-question">Avez-vous le sentiment de comprendre votre partenaire et d’être compris par lui ?</p>
+        <p class="number-question">4</p>
+      </div>
+      <div class="contenu">
+          <div class="infos">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
+              <button>Consulter</button>
+          </div>
+      </div>
+    </div>
+
+    <div class="bloc">
+      <div class="bloc-haut">
+        <div class="rond">
+          <img src="./images/accueil/together.png" alt="" />
+        </div>
+        <p class="titre-question">Vous arrive-t-il de lui mentir délibérément ?</p>
+        <p class="number-question">5</p>
+      </div>
+      <div class="contenu">
+          <div class="infos">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, et commodi earum eius ipsa, nulla molestiae iusto eligendi qui non nihil ab, rerum vel exercitationem.</p>
+              <button>Consulter</button>
+          </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Offres -->
+  <section class="container-fluid aligner-centrer" id="avis">
+    <div class="row mb-4 mt-5">
+      <h2 class="bebas">Ce que mes clients disent</h2>
+    </div>
+    <div class="row justify-content-around mx-3 avis-clients">
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Depression Therapy</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Consultations couples</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Relations</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Relations</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Relations</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+      <div class=" info-offres aligner px-4 px-sm-5 py-3 mb-5 mx-3">
+        <img alt="" src="./images/accueil/profil.jpg">
+        <h3 class="bebas py-3">Relations</h3>
+        <p class="roboto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit dolore exercitationem maiores est cum blanditiis quasi. Facere, fuga dolor?</p>
+      </div>
+    </div>
+  </section>
+
+
 
   
   <script src="./app.js"></script>
