--- a/index.html
+++ b/index.html
@@ -345,7 +345,45 @@
   </section>
 
 
-
+   <!-- Footer -->
+   <footer class="container-fluid">
+    <div class="row justify-content-around">
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5">
+        <h2 class="mb-2">Brooks</h2>
+        <p>Psychologue de couple</p>
+        <p><img alt="" src="./images/footer/phone.png"> 06 00 00 00 00</p>
+        <p><img alt="" src="./images/footer/mail.png"> test@gmail.com</p>
+        <p><img alt="" src="./images/footer/localisation.png"> 24 Avenue Jean Jaurès, 35 000 Rennes</p>
+      </div>
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5 px-4 px-xxl-1">
+        <h2 class="mb-2">Nouvelles</h2>
+        <p>Efficacité des traitements psychologiques.
+          Avantages de l'apprentissage et de la pratique de la méditation.
+          Qu'est-ce que la dépression et que puis-je faire pour y remédier ?</p>
+      </div>
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5">
+        <div class="reseau">
+          <h2 class="mb-2">S'informer</h2>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <ul>
+        <li><a>Accueil</a></li>
+        <li><a>À propos</a></li>
+        <li><a>Services</a></li>
+        <li><a>Contact</a></li>
+        <li><a>Blog</a></li>
+      </ul>
+    </div>
+    <div class="row justify-content-around pt-3 copyright">
+      <div class="col-sm-5 col-lg-3">Copyright © 2022 Psychiatrist Clinic</div>
+      <div class="col-sm-5 col-lg-3">Powered by Astra WordPress Theme</div>
+    </div>
+   </footer>
   
   <script src="./app.js"></script>
   <!-- JavaScript Bundle with Popper -->
