Page "services" Responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 
+  <div id="principale">
   <!-- Header -->
   <header>
     <div class="logo">
@@ -60,6 +61,8 @@
         </div>
       </div>
   </main>
+  </div>
+
 
   <!-- Offres -->
   <section class="container-fluid aligner-centrer" id="offres">
@@ -305,7 +308,7 @@
   </section>
 
 
-  <!-- Offres -->
+  <!-- Avis -->
   <section class="container-fluid aligner-centrer" id="avis">
     <div class="row mb-4 mt-5">
       <h2 class="bebas">Ce que mes clients disent</h2>
