--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="./images/accueil/logo.png" alt="tree">
+      <img src="./images/accueil/logo.png" alt="">
       <h1>test</h1>
     </div>
     <!-- menu responsive -->
