Page "propos" responsive

--- a/propos.html
+++ b/propos.html
@@ -76,7 +76,7 @@
 
   <!-- Diplomes -->
   <section id="diplomes">
-    <h2 class="pt-5">Diplômes et expériences</h2>
+    <h2>Diplômes et expériences</h2>
     <div class="slider">
       <div class="slide-track">
 
@@ -128,6 +128,73 @@
     </div>
   </section>
   
+
+  <!-- Experiences -->
+  <section id="experience">
+    <h2 class="bebas text-center mb-5">Mon expérience</h2>
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-10 col-lg-9 col-xxl-7">
+        <strong class="roboto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum sit nobis magni odio officiis autem expedita harum, iusto, ipsam reprehenderit nemo facere enim veritatis commodi aperiam repellat debitis a similique modi molestiae necessitatibus laboriosam. Quis similique alias est impedit sed veniam commodi a vel perspiciatis optio obcaecati omnis voluptates sint dignissimos praesentium doloremque, et placeat odio nihil in beatae animi consectetur nemo expedita. Nisi reiciendis quos dignissimos repudiandae quas corporis nostrum tempora qui impedit doloribus, aspernatur ipsa recusandae consequuntur esse debitis? Tenetur magni cupiditate accusamus veniam saepe qui sed quod ex autem vero recusandae quam iusto facere optio dolore omnis rem id eligendi voluptate in maxime laborum dolorum, obcaecati impedit. Dicta sequi obcaecati similique quisquam quidem. Laborum fugiat perspiciatis consequatur rem autem voluptas assumenda veniam. Optio possimus aliquam, eos error dolores repellendus rerum. Natus qui repellendus optio sed repudiandae aperiam aspernatur iste ratione, id dolorum inventore nostrum enim voluptatibus perspiciatis! Expedita optio dignissimos perspiciatis iste tempore illo, odio voluptatum alias modi nostrum asperiores?</strong>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Photos -->
+  <section id="photos" class="container-fluid">
+    <h2 class="bebas text-center mb-5">Photos de la classe</h2>
+    <div class="centrer">
+      <div class="photo">
+        <img alt="" src="./images/propos/diplome1.png">
+        <img alt="" src="./images/propos/diplome2.jpg">
+        <img alt="" src="./images/propos/diplome3.jpg">
+        <img alt="" src="./images/propos/diplome4.jpg">
+        <img alt="" src="./images/propos/diplome5.jpg">
+        <img alt="" src="./images/propos/diplome6.jpg">
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Footer -->
+  <footer class="container-fluid">
+    <div class="row justify-content-around">
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5">
+        <h2 class="mb-2">Brooks</h2>
+        <p>Psychologue de couple</p>
+        <p><img alt="" src="./images/footer/phone.png"> 06 00 00 00 00</p>
+        <p><img alt="" src="./images/footer/mail.png"> test@gmail.com</p>
+        <p><img alt="" src="./images/footer/localisation.png"> 24 Avenue Jean Jaurès, 35 000 Rennes</p>
+      </div>
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5 px-4 px-xxl-1">
+        <h2 class="mb-2">Nouvelles</h2>
+        <p>Efficacité des traitements psychologiques.
+          Avantages de l'apprentissage et de la pratique de la méditation.
+          Qu'est-ce que la dépression et que puis-je faire pour y remédier ?</p>
+      </div>
+      <div class="col-sm-5 col-lg-3 col-xxl-2 mb-5">
+        <div class="reseau">
+          <h2 class="mb-2">S'informer</h2>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <ul>
+        <li><a>Accueil</a></li>
+        <li><a>À propos</a></li>
+        <li><a>Services</a></li>
+        <li><a>Contact</a></li>
+        <li><a>Blog</a></li>
+      </ul>
+    </div>
+    <div class="row justify-content-around pt-3 copyright">
+      <div class="col-sm-5 col-lg-3">Copyright © 2022 Psychiatrist Clinic</div>
+      <div class="col-sm-5 col-lg-3">Powered by Astra WordPress Theme</div>
+    </div>
+   </footer>
 
   <script src="./propos.js"></script>
 </body>
