--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
           <li><a href="propos.html">À propos</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="blog.html">Blog</a></li>
       </ul>
     </header>
 
