--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Medical</title>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 
@@ -114,7 +123,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-6 p-0 centrer mb-5">
-        <img alt="" src="./images/accueil/prof2.jpg">
+        <img alt="" src="./images/accueil/prof2.jpg" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="500">
       </div>
     </div>
   </section>
@@ -130,7 +139,7 @@
         <p class="col-md-10 col-xl-8 col-xxl-6 roboto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, non.</p>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="300">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Personnel</h3>
             <p>99€ / H</p>
@@ -159,7 +168,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="500">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Couple</h3>
             <p>179€ / H</p>
@@ -188,7 +197,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-xxl-3 centrer-row mb-5">
+        <div class="col-md-6 col-xxl-3 centrer-row mb-5" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="700">
           <div class="choix p-3 p-sm-5">
             <h3 class="pb-1">Groupe</h3>
             <p>299€ / H</p>
@@ -398,5 +407,12 @@
   <script src="./app.js"></script>
   <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+  AOS.init({
+    once: true,
+    easing: 'ease-in-out'
+  }
+  );
+</script>
 </body>
 </html>
